website/static/website/styles/home.css
.logo-home {
  height: 10rem;
  width: 10rem;
  display: block;
  margin: 0 auto;
}

.events-cards-home {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-evenly;
  justify-content: center;
}

.event-card-home {
  margin: 1rem;
  width: 25rem;
  height: auto;
}

.event-card-home .card-header {
  background: #4a4a4a;
  color: white;
  border: 0px;
  border-radius: 0px !important;
  text-align: center;
}

.event-card-home a:hover {
  text-decoration: none;
}

.sponsor-list-logo-home {
  width: 10rem;
  height: 3rem;
  margin: 3rem;
  display: flex;
  align-items: center;
  justify-content: center;
}

@media (max-width: 991.98px) {
  .sponsor-list-logo-home {
    width: 10rem;
    height: 2rem;
    margin: 3rem;
  }
}

@media (max-width: 767.98px) {
  .sponsor-list-logo-home {
    width: 9rem;
    height: 3rem;
    margin: 1rem;
  }
}

@media (max-width: 575.98px) {
  .sponsor-list-logo-home {
    width: 8.1rem;
    height: 2.7rem;
    margin: 1rem;
  }
}

.sponsor-logo-home {
  max-width: 100%;
  max-height: 100%;
}

@media (max-width: 575.98px) {
  h1 {
    font-size: 1.7rem;
  }
}

#header {
  background: url(/static/website/images/header.jpg);
  background-size: cover;
  min-height: 389px;
  background-position: center;
  margin-bottom: 35px;
}

#header-bg-shade {
  background: #0000001f;
  background-size: cover;
  min-height: 390px;
  color: white;
  padding-top: 70px;
}

#header h1 {
  text-shadow: 1px 1px black;
}

#header #uos-text {
  font-size: 30px;
}

.container h2 {
  margin-top: 35px;
  background: #f4f4f4;
  padding: 10px;
  border-bottom: 2px solid #d2d2d2;
  font-size: 24px;
  color: #353535;
  text-shadow: 1px 1px #d2d2d240;
  font-weight: bold;
}

.dark-theme .container h2 {
  background: #2f2f2f;
  border-bottom-color: #242424;
  color: white;
  text-shadow: 1px 1px #3c3c3c;
}

